# challenges_maestria_ciencia_de_datos

./: README.md
Challenge_Avanzado/: Challenge_Avanzado_Descripcion.md  Challenge_Avanzado_Pycaret2.ipynb  README.md  pyproject.toml
